<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_fastrtps_c</name>
  <version>2.0.4</version>
  <description>Generate the C interfaces for eProsima FastRTPS.</description>

  <maintainer email="shane@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author>Ricardo González</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_parser</buildtool_depend>

  <buildtool_export_depend>ament_cmake_ros</buildtool_export_depend>
  <buildtool_export_depend>fastrtps_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_parser</buildtool_export_depend>

  <build_export_depend>fastcdr</build_export_depend>
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_fastrtps_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_interface</build_export_depend>

  <exec_depend>fastcdr</exec_depend>
  <exec_depend>rosidl_typesupport_fastrtps_cpp</exec_depend>

  <depend>rosidl_runtime_c</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_cmake</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>performance_test_fixture</test_depend>

  <member_of_group>rosidl_typesupport_c_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
